<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
<string name="sensors_have_a_low_accuracy">Sensors have a low accuracy</string>
<string name="snapshot_has_been_saved_to_">Snapshot has been saved to </string>
<string name="you_need_to_restart_the_application_for_this_option_to_be_taken_into_account">You need to restart the application for this option to be taken into account</string>
<string name="FullScreenApplication">Full screen application</string>
<string name="PreventSleepMode">Prevent sleep mode</string>
<string name="DisplayDebugInfos">Display debug infos</string>
<string name="looking_for_updates_">Looking for updates...</string>
<string name="UseSensorsToChangePOV">Use sensors</string>
<string name="Gather_usage_data">Gather usage data</string>
<string name="Load_last_used_file">Load last used file</string>
<string name="Show_splash_screen">Show splash screen</string>
<string name="Show_tutorial">Show tutorial</string>
<string name="check_update">Check update</string>
<string name="show_about_panel">About</string>
<string name="show_options_panel">Options</string>
<string name="no">No</string>
<string name="yes">Yes</string>
<string name="this_tutorial_is_over_do_you_want_to_see_it_again_next_time_">This tutorial is over. Do you want to see it again at next startup ?</string>
<string name="finishBtn">Finish</string>
<string name="show_splash">Splash</string>
<string name="show_options">Options</string>
<string name="tutorial_wizard">Tutorial</string>
<string name="update_version_panel">Check version</string>
<string name="debug_panel">Debug</string>
<string name="point_of_view">Point of view</string>
<string name="tools_panel">Tools</string>
<string name="show_point_of_view_panel">Point of view</string>
<string name="show_tools_panel">Tools</string>
<string name="latest_version_is_">Latest version is </string>
<string name="current_version_is_">Current version is </string>
<string name="this_version_is_not_a_beta_">This version is not a beta</string>
<string name="this_version_is_a_beta_">This version is a beta</string>
<string name="no_update_is_needed_">No update is needed</string>
<string name="an_update_is_needed_">An update is needed</string>
<string name="show_check_version_panel">Check version</string>
<string name="edit">Edit</string>
<string name="quit">Quit</string>
<string name="show_debug_panel">Debug</string>
<string name="app_name">TrueSculpt</string>
<string name="show_tutorial_wizard_panel">Tutorial</string>
<string name="color_picker">Choose color</string>
<string name="show_sensors">Sensors</string>
<string name="show_test">Test</string>
<string name="prevBtn">Previous</string>
<string name="nextBtn">Next</string>
<string name="about_text">Written by Fabrice Boyer\nfabrice.boyer@gmail.com</string>
<string name="ok_btn">Ok</string>
<string name="really_quit">Are you sure you want to quit ?\n\nAny unsaved change will be lost !</string>
<string name="Reset">Reset</string>
<string name="unable_to_get_update_status">Unable to get update status</string>
<string name="view">View</string>
<string name="sculpt">Sculpt</string>
<string name="Strength">Strength</string>
<string name="Radius">Radius</string>
<string name="paint">Paint</string>
<string name="screenshot">Screenshot</string>
<string name="ResetPOV">Reset View</string>
<string name="ambilwarna_cancel">Cancel</string>
<string name="ambilwarna_ok">OK</string>
<string name="Paintingtool">Painting tool</string>
<string name="Sculptingtool">Sculpting tool</string>
<string name="close">Close</string>
<string name="Choose_existing">Choose existing</string>
<string name="Publish_to_web_site">Publish to online library</string>
<string name="choose_from_web_site">Open from online library</string>
<string name="pick_color">Pick color</string>
<string name="symmetry">Symmetry</string>
<string name="undo">Undo</string>
<string name="redo">Redo</string>
<string name="undouptothispoint">Undo up to this point</string>
<string name="show_history">History</string>
<string name="history">History</string>
<string name="statistics">Statistics</string>
<string name="fileSelector">File</string>
<string name="undo_this_item">Undo this item</string>
<string name="licence">This software and it\'s source are licensed under Creative Commons "Attribution Non-Commercial Share-Alike 3.0" (CC BY-NC-SA 3.0)\nhttp://creativecommons.org/licenses/by-nc-sa/3.0/ </string>
<string name="spacer"> </string>
<string name="Website">Website</string>
<string name="donate">If you like this software and want to show your support, feel free to donate on the website or buy the "donate version" of the application on the android market</string>
<string name="share_by_mail">Share by mail</string>
<string name="new_file">New</string>
<string name="open_file">Open</string>
<string name="sculpture_name">Name</string>
<string name="save">Save</string>   
<string name="show_files">Files</string>
<string name="file_already_exist_wanna_override">File already exist, do you want to overwrite it ?</string>
<string name="newfile">New</string>
<string name="openfile">Open</string>
<string name="savefile">Save</string>  
<string name="webfile">Web</string>
<string name="Subdivion_level">Subdivion</string>      
<string name="initial_shape">Initial shape</string>    
<string name="set_as_wallpaper">Set as wallpaper</string>
<string name="wallpaper_successfully_set">Wallpaper successfully set</string>
<string name="tutorial">Tutorial</string>  
<string name="help">Help</string>
<string name="donate_btn">Donate</string>  
<string name="open_save_folder">Open save folder</string>  
<string name="Delete">Delete</string>  
<string name="Rename">Rename</string>
<string name="Cancel">Cancel</string>
<string name="backgroundgradientcolors">Background gradient colors</string>
<string name="lightcolor">Light color</string>
<string name="symmetryplanecolor">Symmetry plane color</string>
<string name="symmetryplanealpha">Symmetry plane transparency</string>
<string name="showsymmetryplane">Show symmetry plane</string>
<string name="showwireframe">Wireframe mode</string>
<string name="showNormals">Show normals</string>
<string name="helpTextColor">Help text color</string>
<string name="showAxis">Show reference axis</string>
<string name="backgroundGradientAngle">Background gradient angle</string>
<string name="SortBy">Sort kind</string>
<string name="SortOrder">Sort order</string>
</resources>
