<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/show_tools_panel" android:title="@string/show_tools_panel" android:icon="@drawable/equalizer"></item>
    <item android:id="@+id/show_options" android:title="@string/show_options" android:icon="@drawable/settings"></item>
    <item android:id="@+id/show_debug_panel" android:title="@string/show_debug_panel" android:icon="@drawable/flag"></item>
    <item android:id="@+id/show_tutorial_wizard_panel" android:title="@string/show_tutorial_wizard_panel" android:icon="@drawable/wizard"></item>        
    <item android:id="@+id/show_check_version_panel" android:title="@string/show_check_version_panel" android:icon="@drawable/globe"></item>
    <item android:id="@+id/show_about_panel" android:title="@string/show_about_panel" android:icon="@drawable/happy"></item>

<!--
    <item android:id="@+id/show_point_of_view_panel" android:title="@string/show_point_of_view_panel" android:icon="@drawable/resize"></item> 
    
    <item android:id="@+id/quit" android:title="@string/quit" android:icon="@drawable/exit"></item>
 -->

</menu>