<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" android:key="options">

<PreferenceCategory android:title="Startup" android:key="startup"><CheckBoxPreference android:key="CheckUpdateAtStartup" android:title="@string/check_update"></CheckBoxPreference><CheckBoxPreference android:key="ViewTutorialAtStartup" android:title="@string/Show_tutorial"></CheckBoxPreference>
<CheckBoxPreference android:key="DisplaySplashScreenAtStartup" android:title="@string/Show_splash_screen"></CheckBoxPreference>

<CheckBoxPreference android:key="LoadLastUsedFileAtStartup" android:title="@string/Load_last_used_file"></CheckBoxPreference>
</PreferenceCategory>
<PreferenceCategory android:title="General" android:key="general"><CheckBoxPreference android:key="GatherUsageData" android:title="@string/Gather_usage_data"></CheckBoxPreference></PreferenceCategory>
</PreferenceScreen>
