<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
   android:orientation="vertical">
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	   android:orientation="horizontal">
	<ImageView android:id="@+id/about_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo"></ImageView>
		<LinearLayout
		   xmlns:android="http://schemas.android.com/apk/res/android"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:orientation="vertical">
			<TextView android:text="@string/about_text" android:id="@+id/about_text" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_version_is_" android:id="@+id/current_version"></TextView>
		</LinearLayout>
	</LinearLayout>
	<TextView android:id="@+id/donateTxt" android:layout_width="wrap_content" android:text="@string/donate" android:layout_height="wrap_content"></TextView>
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/donateBtn" android:text="@string/donate_btn"></Button>
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/tutorials" android:text="@string/tutorial_wizard"></Button>
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/help" android:text="@string/help"></Button>	
	<ImageView android:layout_height="wrap_content" android:src="@drawable/licence_logo" android:id="@+id/licence_logo" android:layout_width="fill_parent"></ImageView>
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/licence" android:text="@string/licence"></TextView>	
		
</LinearLayout>
