<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">



 	<android.opengl.GLSurfaceView 
            android:id="@+id/glview" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"/> 
            
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="bottom"
        android:stretchColumns="*">
          
    <TableRow>                
	  <ToggleButton android:textOn="@string/view"  android:textOff="@string/view" android:id="@+id/View" android:layout_width="fill_parent" android:layout_height="wrap_content"></ToggleButton>
	  <ToggleButton android:textOn="@string/sculpt"  android:textOff="@string/sculpt" android:id="@+id/Sculpt" android:layout_width="fill_parent" android:layout_height="wrap_content"></ToggleButton>
	  <ToggleButton android:textOn="@string/paint"  android:textOff="@string/paint" android:id="@+id/Paint" android:layout_width="fill_parent" android:layout_height="wrap_content"></ToggleButton>
	</TableRow>
	
</TableLayout>      

<SlidingDrawer android:layout_width="wrap_content" android:id="@+id/toolsSlidingDrawer"  android:layout_gravity="bottom" android:orientation="vertical" android:handle="@+id/toolsSlideHandleButton" android:content="@+id/contentLayout" android:layout_height="250dip" android:padding="10dip">
	 <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/toolsSlideHandleButton" android:background="@drawable/tab"></Button>
	 <LinearLayout android:layout_width="wrap_content" android:id="@+id/contentLayout" android:orientation="horizontal" android:gravity="center|top" android:layout_height="wrap_content" android:padding="10dip">
	 	<Spinner style="@style/SpinnerAsEditText" android:layout_height="wrap_content" android:id="@+id/SculptToolSpinner" android:layout_width="wrap_content"></Spinner>
     </LinearLayout>	 
</SlidingDrawer>
     
</FrameLayout>
